# software-design-cli

./: .gitignore  CMakeLists.txt  LICENCE.md  Makefile  README.md  main.cpp
.github/workflows/: ci.yaml
core/: CMakeLists.txt
core/include/: cat_command.hpp  cd_command.hpp  cli.hpp  command.hpp  dummy_input.hpp  dummy_output.hpp  echo_command.hpp  executor.hpp  exit_command.hpp  external_command.hpp  global_state.hpp  grep_command.hpp  input.hpp  ls_command.hpp  output.hpp  parser.hpp  pipe.hpp  pwd_command.hpp  std_input.hpp  std_output.hpp  text_input.hpp  text_output.hpp  wc_command.hpp
core/src/: cat_command.cpp  cd_command.cpp  cli.cpp  echo_command.cpp  executor.cpp  external_command.cpp  grep_command.cpp  input.cpp  ls_command.cpp  output.cpp  parser.cpp  pipe.cpp  pwd_command.cpp  wc_command.cpp
defects/practise_10_29/: README.md
diagrams/diagrams_3/: README.md
docs/: README.md  SD_CLI.drawio  architecture.md
test/: CMakeLists.txt  cli_test.cpp  command_test.cpp  external_command_test.cpp  parser_test.cpp  pipe_test.cpp
test/data/: file.txt
